clusters/homelab/raspberry-pi-client/manifest.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raspberry-pi-client
spec:
  selector:
    matchLabels:
      app: raspberry-pi-client
  replicas: 1
  template:
    metadata:
      labels:
        app: raspberry-pi-client
    spec:
      containers:
      - name: raspberry-pi-client
        image: ghcr.io/rustygreen/raspberry-pi-client:main
        imagePullPolicy: "Always"
        ports:
          - containerPort: 80
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: raspberry-pi-client
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  raspberry-pi-client
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raspberry-pi-client
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
spec:
  rules:
    - host: pi.rusty.green
      http:
        paths:
          - backend:
              service:
                name: raspberry-pi-client
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pi.rusty.green
